# dynagraph

./: .gitignore  Config.mk  DuplicateStream.cpp  DuplicateStream.h  IncrCalledBack.cpp  IncrCalledBack.h  LayoutChooserConfigurator.h  LayoutConfigurators.h  Makefile.am  Makefile.in  Makefile.old  TestTraversals.h  configure.old  cpp_interface_example.cpp  createConfiguration.cpp  createConfiguration.h  dg.vcproj  dynagraph-playground.html  dynagraph.7.10.vcproj  dynagraph.8.00.vcproj  dynagraph.html  dynagraph.rc  dynagraph.vcproj  dynagraph.version.h  dynagraph.version.rc  dynagraph.version.rc.h  example_no_incrface.cpp  example_with_incrface.cpp  gengraph.cpp  incrface-print.js  incrface.mjs  incrface.pegjs  instantiateEngines.cpp  main.cpp  parse.js
common/: AttrValues.h  BezCoeffs.h  BoostLGraph.h  CalculateBounds.h  ChangeProcessor.h  ChangeQueue.h  ChangeTools.h  ChangeTranslator.h  ChangingGraph.h  ColorByAge.cpp  ColorByAge.h  ColorByAgeConfigurator.h  Colors.cpp  Colors.h  Configurator.h  CoordTranslator.h  CoordTranslatorConfigurator.h  DiffStrGraph.h  Dynagraph.cpp  Dynagraph.h  DynagraphServer.h  DynagraphThread.h  DynagraphWorld.h  EdgeSplicer.h  EnginePair.h  FindChangeRect.cpp  FindChangeRect.h  FindChangeRectsConfigurator.h  GeneralLayout.h  GeomUtil.h  Geometry.h  GraphBuffer.h  IncrWorld.h  InternalTranslator.h  InternalWorld.h  Interruptable.h  Interruptible.h  LGraph-cdt.h  LGraph.h  LabelPlacer.cpp  (+81 more)
dynadag/: Check.cpp  ClearExtraRanksConfigurator.h  ClearExtraRanksEngine.h  Config.cpp  Config.h  ConseqRanks.h  ConstraintGraph.cpp  ConstraintGraph.h  Constraints.h  Crossings.h  DotlikeOptimizer.cpp  DotlikeOptimizer.h  Dump.cpp  Dump.h  DynaDAG.cpp  DynaDAG.h  DynaDAGChains.h  DynaDAGConfigurator.h  DynaDAGDefs.h  DynaDAGLayout.h  DynaDAGModel.h  DynaDAGServices.h  DynaDAGTranslatorTraits.h  EdgeDrawing.cpp  EdgeSplicer.h  EdgeSuppressionAttrs.h  EdgeSuppressor.h  EdgeSuppressorConfigurator.h  EmphasizeFlowConfigurator.h  EnsureParallelEdgeRanks.h  EnsureParallelEdgeRanksConfigurator.h  ExtraRanks.h  FlexiRankXlator.h  FlexiRanks.h  FlexiSpline.cpp  FlexiSpliner.h  HybridOptimizer.cpp  HybridOptimizer.h  HybridOptimizer2.cpp  Makefile.am  (+45 more)
fdp/: FDPConfigurator.h  FDPLayout.h  FDPModel.h  FVSCombo.h  Makefile.am  Makefile.in  Makefile.old  createFDPEngine.cpp  fdp.7.10.vcproj  fdp.h  fdp.vcproj  grid.cpp  grid.h  layout.cpp  macros.h  process.cpp
flowsWork/: Config.mk  configure.old  dynagraph.html  dynagraph.vcproj  dynagraph.version.rc  dynagraph.version.rc.h  example_no_incrface.cpp  example_with_incrface.cpp  main.cpp
flowsWork/common/: ColorByAge.h  FindChangeRect.h  Geometry.h  GraphBuffer.h  LabelPlacer.h  LayoutAttrs.h  LineTricks.cpp  LineTricks.h  Makefile.am  StringDict.cpp  Transform.cpp  ag2str.h  derivable_dt.h  dt.h  ellipse2bezier.cpp  genpoly.cpp  genpoly.h  moremath.h  parsestr.cpp  parsestr.h  randomName.h  reorient.h  stringsIn.h  stringsOut.cpp  stringsOut.h  time-o-matic.cpp  useful.h  xlines.c
flowsWork/dynadag/: Check.cpp  Config.cpp  ConstraintGraph.cpp  DynaDAG.h  FlexiSpline.cpp  Makefile.am  Measurements.h  MedianShuffle.cpp  MedianTwiddle.cpp  Medians.h  Ranker.cpp  SetYs.cpp  SiftMatrix.h  Sifter.cpp  Spline.cpp  dynadag.vcproj  getCrossoptModelNodes.cpp  ns.h  nsdat.h
flowsWork/fdp/: FDPLayout.h  Makefile.am  Makefile.old  fdp.h  fdp.vcproj
graphsearch/: Collapse.cpp  FindAllPaths.h  Makefile.am  Makefile.in  Makefile.old  Pattern.cpp  Pattern.h  Search.cpp  Search.h  findShortestPaths.h  graphsearch.7.10.vcproj  graphsearch.8.00.vcproj  graphsearch.cpp  graphsearch.rc  graphsearch.vcproj  graphsearch.version.rc  gscmds.cpp  gscmds.h  gsgram.cpp  gsgram.h  gsgram.ypp  gsgraph.h  gsscan.cpp  gsscan.lpp  gsxep.h
graphviz-makefiles/: Config.mk  Makefile  config.h  update-cfiles.csv
incrface/: .gitignore  AbsGraphHandler.h  DinoMachine.h  DinoMachineHandler.cpp  DinoMachineHandler.h  DinoMachineTranslator.cpp  DinoMachineTranslator.h  DinoPatternLook.h  DinoSearchLook.h  DynaView.cpp  DynaView.h  IncrLangEvents.h  IncrMappings.h  IncrStrGraphHandler.h  IncrViewWatcher.h  IncrWorld.h  LabelToNameTranslator.h  LoggerConfigurator.h  Makefile.am  Makefile.in  Makefile.old  MatchNames.h  OutputDot.h  OutputIncrface.h  RegisteringConfigurator.h  TextWatcherOutput.h  View.cpp  View.h  WorldInABox.h  createLayoutServer.cpp  createLayoutServer.h  createStrWorldAndHandler.h  createStringHandlers.h  incrcmds.cpp  incrcmds.h  incrface.7.10.vcproj  incrface.vcproj  incrglobs.h  incrgram.cpp  incrgram.h  (+8 more)
makearch/: aix41  hp.pa  linux.i386  linux.x86_64  macos  netbsd.i386  osf.alpha  osx  osx-clang  sgi.mips2  sgi.mips3  sol.i386  sol.sun4  sol6.sun4  sun4  wasm
pathplot/: BezCoeffs.h  Makefile.old  PathPlot.h  PolyBarriers.cpp  Route.cpp  Shortest.cpp  Solvers.cpp  Solvers.h  pathplot.7.10.vcproj  pathplot.8.00.vcproj  pathplot.vcproj
shortspline/: Makefile.am  Makefile.in  Makefile.old  ObAvSplinerEngine.cpp  ObAvSplinerEngine.h  ObstacleAvoiderSpliner.cpp  ObstacleAvoiderSpliner.h  legal_arrangement.c  legal_arrangement.h  shortspline.7.10.vcproj  shortspline.cpp  shortspline.h  shortspline.vcproj  simple.h
tests/: 2cycle-spread.incr  2cycle.incr  3cycle.incr  Makefile.old  backward-2cycle.incr  backward.incr  badphases.incr  dotest  duosuppresso.incr  dynasty-multisuppress-bug.incr  fanning.incr  fdp.incr  flow.incr  inconsistent-suppressrank.incr  jumpiness.incr  jumpiness2.incr  llel.incr  llel2.incr  manual-s-edge.incr  missing-attrs.incr  nodecross-assertion.incr  one-edge.incr  parallel-edges.incr  recreate.incr  recreate.super.incr  reinsert.incr  reinsert.super.incr  reinsert2.incr  reinsert2.super.incr  reverstest.incr  runtests  selfs.incr  separation-assertion.incr  star.incr  star.super.incr  star2.incr  star2.super.incr  stressuppresso.incr  stub-elongating.incr  suppress-2cycle.incr  (+6 more)
voronoi/: Makefile.am  Makefile.in  Makefile.old  edges.cpp  edges.h  heap.cpp  hedges.cpp  hedges.h  info.cpp  info.h  process.cpp  site.cpp  site.h  voronoi.7.10.vcproj  voronoi.cpp  voronoi.h  voronoi.vcproj
(+35 files in other folders)
